--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav id='menu'>
         <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
         <ul>
-            <li><a href='http://'>Home</a></li>
+            <li><a href="javascript:location.reload();">Home</a></li>
             <li><a class='dropdown-arrow' href='http://'>Contact Me</a>
             <ul class='sub-menus'>
                 <li>
